--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>My First github push</h1>
     <h2>I can code now</h2>
-    <h3>New code changed</h3>
+    <h3>New code changed to orange</h3>
     <p>more paragraph</p>
     <p>I am codding and codding</p>
 </body>
