--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My First github push</h1>
+    <h1>My First github.com push</h1>
     <h2>I can code now</h2>
     <h3>New code changed to orange</h3>
     <p>more paragraph</p>
     <p>I am codding and codding</p>
+    <img src="masud.png" alt="">
 </body>
 </html>
