--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <div>
         <h3>New blog</h3>
-        <h5>Look mama i can write a blog</h5>
+        <h5>Look mama i can write a blog. Its not your mama its your amma</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quae dolorem officia, hic molestiae perspiciatis quibusdam unde ipsa sunt, veniam, quidem similique suscipit non consequuntur minus! Corporis officiis tenetur possimus nisi magnam. Nisi pariatur voluptatibus possimus, labore eaque eligendi omnis.</p>
     </div>
     <br>
