--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="nav-container">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Section</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
     <h1>My First github.com push</h1>
     <h2>I can code now</h2>
     <h3>New code changed to orange</h3>
