--- a/index.html
+++ b/index.html
@@ -64,5 +64,10 @@
             </div>
         </div>
     </section>
+
+    <!-- footer section -->
+    <section class="footer">
+        <p>&copy; Peter Parker 2022, a Programming Hero initiative.</p>
+    </section>
 </body>
 </html>
